# current

./: Cargo.toml  README.md  docker-compose.yml
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
