[package]
name = "current"
version = "0.1.0"
authors = ["ozbe <1372945+ozbe@users.noreply.github.com>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
pretty_env_logger = "0.4.0"
redis = "0.16.0"
futures-util = "0.3.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.56"
tokio = { version = "0.2.21", features = ["macros", "sync"] }
warp = "0.2.3"
log = "0.4.8"
termion = "1.5.5"
unicode-width = "0.1.8"
tui = "0.9.5"
